syntax = "proto3";

package policy.resourcemapping;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";

import "common/common.proto";
import "policy/objects.proto";

/*
   Resource Mappings
*/

message ListResourceMappingsRequest {}

message ListResourceMappingsResponse {
  repeated policy.ResourceMapping resource_mappings = 1;
}

message GetResourceMappingRequest {
  string id = 1 [(buf.validate.field).required = true];
}

message GetResourceMappingResponse {
  policy.ResourceMapping resource_mapping = 1;
}

/*
 ### Request

     grpcurl -plaintext -d @ localhost:9000 policy.resourcemapping.ResourceMappingService/CreateResourceMapping <<EOM
       {
         "mapping": {
           "name": "Classification",
           "attribute_value_id": "12345678-1234-1234-1234-123456789012",
           "terms": ["CONFIDENTIAL", "CONTROLLED UNCLASSIFIED", "OFFICIAL-SENSITIVE", "CUI", "C"]
         }
       }
     EOM

   ### Response

     {
       "mapping": {
         "metadata": {
           "id": "12345678-1234-1234-1234-123456789012",
           "created_at": "2020-01-01T00:00:00Z",
           "updated_at": "2020-01-01T00:00:00Z"
         },
         "name": "Classification",
         "attribute_value_id": "12345678-1234-1234-1234-123456789012",
         "terms": ["CONFIDENTIAL", "CONTROLLED UNCLASSIFIED", "OFFICIAL-SENSITIVE", "CUI", "C"]
       }
     }

*/
message CreateResourceMappingRequest {
  // Required
  string attribute_value_id = 1 [(buf.validate.field).required = true];

  repeated string terms = 2 [(buf.validate.field).required = true];

  // Optional
  common.MetadataMutable metadata = 100;
}
message CreateResourceMappingResponse {
  ResourceMapping resource_mapping = 1;
}

message UpdateResourceMappingRequest {
  // Required
  string id = 1 [(buf.validate.field).required = true];

  // Optional
  string attribute_value_id = 4;

  repeated string terms = 5;

  // Common Metadata
  common.MetadataMutable metadata = 100;
  common.MetadataUpdateEnum metadata_update_behavior = 101;
}
message UpdateResourceMappingResponse {
  ResourceMapping resource_mapping = 1;
}

message DeleteResourceMappingRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message DeleteResourceMappingResponse {
  ResourceMapping resource_mapping = 1;
}

service ResourceMappingService {
  /*
     Resource Mappings
  */
  /*
     Request Example:
     - empty body

     Response Example:
     {
       "resource_mappings": [
           {
               "terms": [
                   "TOPSECRET",
                   "TS",
               ],
               "id": "3c649464-95b4-4fe0-a09c-ca4b1fecbb0e",
               "metadata": {
                   "labels": [],
                   "created_at": {
                       "seconds": "1706103276",
                       "nanos": 510718000
                   },
                   "updated_at": {
                       "seconds": "1706107873",
                       "nanos": 399786000
                   },
                   "description": ""
               },
               "attribute_value": {
                   "members": [],
                   "id": "f0d1d4f6-bff9-45fd-8170-607b6b559349",
                   "metadata": null,
                   "attribute_id": "",
                   "value": "value1"
               }
           }
       ]
     }
  */
  rpc ListResourceMappings(ListResourceMappingsRequest) returns (ListResourceMappingsResponse) {
    option (google.api.http) = {get: "/resource-mappings"};
  }

  /*
     Request Example:
     {
       "id": "3c649464-95b4-4fe0-a09c-ca4b1fecbb0e"
     }

     Response Example:
     {
       "resource_mapping": {
         "terms": [
             "TOPSECRET",
             "TS",
         ],
         "id": "3c649464-95b4-4fe0-a09c-ca4b1fecbb0e",
         "metadata": {
             "labels": [],
             "created_at": {
                 "seconds": "1706103276",
                 "nanos": 510718000
             },
             "updated_at": {
                 "seconds": "1706107873",
                 "nanos": 399786000
             },
             "description": ""
         },
         "attribute_value": {
             "members": [],
             "id": "f0d1d4f6-bff9-45fd-8170-607b6b559349",
             "metadata": null,
             "attribute_id": "",
             "value": "value1"
         }
       }
     }
  */
  rpc GetResourceMapping(GetResourceMappingRequest) returns (GetResourceMappingResponse) {
    option (google.api.http) = {get: "/resource-mappings/{id}"};
  }

  /*
     Request Example:
     {
       "resource_mapping": {
         "attribute_value_id": "f0d1d4f6-bff9-45fd-8170-607b6b559349",
         "terms": [
             "TOPSECRET",
             "TS",
         ]
       }
     }

     Response Example:
     {
       "resource_mapping": {
         "terms": [
             "TOPSECRET",
             "TS",
         ],
         "id": "3c649464-95b4-4fe0-a09c-ca4b1fecbb0e",
         "metadata": {
             "labels": [],
             "created_at": {
                 "seconds": "1706103276",
                 "nanos": 510718000
             },
             "updated_at": {
                 "seconds": "1706107873",
                 "nanos": 399786000
             },
             "description": ""
         },
         "attribute_value": {
             "members": [],
             "id": "f0d1d4f6-bff9-45fd-8170-607b6b559349",
             "metadata": null,
             "attribute_id": "",
             "value": "value1"
         }
       }
     }
  */
  rpc CreateResourceMapping(CreateResourceMappingRequest) returns (CreateResourceMappingResponse) {
    option (google.api.http) = {
      post: "/resource-mappings"
      body: "*"
    };
  }

  /*
     Request Example:
     {
       "id": "3c649464-95b4-4fe0-a09c-ca4b1fecbb0e",
       "resource_mapping": {
         "attribute_value_id": "f0d1d4f6-bff9-45fd-8170-607b6b559349",
         "terms": [
             "TOPSECRET",
             "TS",
             "NEWTERM"
         ]
       }
     }

     Response Example:
     {
       "resource_mapping": {
         "terms": [
             "TOPSECRET",
             "TS",
         ],
         "id": "3c649464-95b4-4fe0-a09c-ca4b1fecbb0e",
         "metadata": {
             "labels": [],
             "created_at": {
                 "seconds": "1706103276",
                 "nanos": 510718000
             },
             "updated_at": {
                 "seconds": "1706107873",
                 "nanos": 399786000
             },
             "description": ""
         },
         "attribute_value": {
             "members": [],
             "id": "f0d1d4f6-bff9-45fd-8170-607b6b559349",
             "metadata": null,
             "attribute_id": "",
             "value": "value1"
         }
       }
     }
  */
  rpc UpdateResourceMapping(UpdateResourceMappingRequest) returns (UpdateResourceMappingResponse) {
    option (google.api.http) = {
      post: "/resource-mappings/{id}"
      body: "*"
    };
  }

  /*
     Request Example:
     {
       "id": "3c649464-95b4-4fe0-a09c-ca4b1fecbb0e"
     }

     Response Example:
     {
       "resource_mapping": {
         "terms": [
             "TOPSECRET",
             "TS",
         ],
         "id": "3c649464-95b4-4fe0-a09c-ca4b1fecbb0e",
         "metadata": {
             "labels": [],
             "created_at": {
                 "seconds": "1706103276",
                 "nanos": 510718000
             },
             "updated_at": {
                 "seconds": "1706107873",
                 "nanos": 399786000
             },
             "description": ""
         },
         "attribute_value": {
             "members": [],
             "id": "f0d1d4f6-bff9-45fd-8170-607b6b559349",
             "metadata": null,
             "attribute_id": "",
             "value": "value1"
         }
       }
     }
  */
  rpc DeleteResourceMapping(DeleteResourceMappingRequest) returns (DeleteResourceMappingResponse) {
    option (google.api.http) = {delete: "/resource-mappings/{id}"};
  }
}
